--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>login and registet</title>
 </head>
 <body>
-    <h1>login</h1>
+    <!-- <h1  form">login</h1>
     <form >
         <input type="email" placeholder="email" id="email">
         <br><br>
@@ -14,18 +14,34 @@
         <br><br>
         <button type="submit">login</button>
     </form>
-    <br>
-    <h1>register</h1>
+    <br> -->
+    <h1 >register</h1>
     <form >
         <input type="text " placeholder="fullname" id="fullname">
         <br><br>
         <input type="email" placeholder="email" id="email">
         <br><br>
-        <input type="passward" placeholder="passward" id="passward">
+        <input type="passward" placeholder="password" id="password">
         <br><br>
         <button type="submit">register</button>
     </form>
 
 
+
+<script src="app.js"></script>
+
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
